--- a/README.rdoc
+++ b/README.rdoc
@@ -1,1 +1,5 @@
 JSON Web Tokens generation from CLI.
+
+For run generator script from CLI:
+  1) Go to project root folder.
+  2) Execute next command – ruby jwt_generate.rb
