--- a/README.rdoc
+++ b/README.rdoc
@@ -2,4 +2,5 @@ JSON Web Tokens generation from CLI.
 
 For run generator script from CLI:
   1) Go to project root folder.
-  2) Execute next command – ruby jwt_generate.rb
+  2) Run 'bundle install'.
+  3) Execute next command – bin/jwt_gen.
